# goit_py_web_hw_11

./: docker-compose.yaml  main.py  pyproject.toml
db_data/pgdata/: postmaster.pid
db_data/pgdata/base/1/: 1259  2619  pg_internal.init
db_data/pgdata/base/16384/: 1247  1249  1259  16389  16392  16394  16395  16401  16403  16404  16405  16406  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
db_data/pgdata/base/5/: pg_internal.init
db_data/pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
db_data/pgdata/pg_xact/: 0000
migrations/: env.py
migrations/versions/: bb307d34cc8c_init.py
src/: schemas.py
src/database/: connect.py  models.py
src/repository/: contacts.py
src/routes/: contacts.py
